--- a/OneDo/Views/Pages/MainPage.xaml
+++ b/OneDo/Views/Pages/MainPage.xaml
@@ -20,21 +20,8 @@
 
         <converters:HexToBrushConverter x:Key="HexToBrushConverter" />
 
-        <Style x:Key="FolderItemContainerStyle" TargetType="ListViewItem">
-            <Setter Property="Padding" Value="0"/>
-            <Setter Property="Margin" Value="0,10,0,0"/>
-            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-            <Setter Property="VerticalContentAlignment" Value="Stretch"/>
-        </Style>
 
-        <DataTemplate x:Key="FolderItemTemplate" x:DataType="vmItems:FolderItemViewModel">
-            <Border Background="{x:Bind Color, Mode=OneWay, Converter={StaticResource HexToBrushConverter}}">
-                <TextBlock Text="{x:Bind Name, Mode=OneWay}" 
-                           Foreground="White" 
-                           HorizontalAlignment="Center" 
-                           VerticalAlignment="Bottom" />
-            </Border>
-        </DataTemplate>
+
 
         <Style x:Key="TodoItemContainerStyle" TargetType="ListViewItem">
             <Setter Property="Padding" Value="0"/>
@@ -54,52 +41,78 @@
                                        RightLabel="Delete"
                                        MouseSlidingEnabled="True">
                 <Grid VerticalAlignment="Center"
-                      Margin="8">
+                      Margin="0,8">
                     <StackPanel Orientation="Horizontal">
                         <FontIcon Glyph="&#xE8FB;" 
                                   Visibility="{x:Bind IsCompleted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
-                                  Margin="0,0,8,0"
-                                  FontSize="16" />
-                        <TextBlock Text="{x:Bind Title, Mode=OneWay}" />
+                                  Margin="12,0,4,0"
+                                  FontSize="18" />
+                        <TextBlock Text="{x:Bind Title, Mode=OneWay}" Margin="8,0,0,0" />
                     </StackPanel>
                 </Grid>
             </controls:SlidableListItem>
         </DataTemplate>
 
         <DataTemplate x:Key="TodoEditorTemplate" x:DataType="vmFlyouts:TodoEditorViewModel">
-            <vFlyouts:TodoEditor />
+            <vFlyouts:TodoEditor Margin="16" />
         </DataTemplate>
 
         <DataTemplate x:Key="SettingsTemplate" x:DataType="vmFlyouts:SettingsViewModel">
-            <vFlyouts:SettingsView />
+            <vFlyouts:SettingsView Width="400"
+                                   HorizontalAlignment="Right" />
         </DataTemplate>
 
     </Page.Resources>
-
+    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="48" />
             <RowDefinition />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0" Background="{ThemeResource SystemControlBackgroundBaseLowBrush}">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="4" />
+            </Grid.RowDefinitions>
             <ListView x:Name="FolderListView"
                       SelectedItem="{x:Bind VM.SelectedFolderItem, Mode=TwoWay, Converter={StaticResource ChangeTypeConverter}}"
                       ItemsSource="{x:Bind VM.FolderItems, Mode=OneWay}"
-                      ItemContainerStyle="{StaticResource FolderItemContainerStyle}"
-                      ItemTemplate="{StaticResource FolderItemTemplate}"
-                      SelectionMode="Single"
                       ScrollViewer.VerticalScrollBarVisibility="Disabled"
                       ScrollViewer.HorizontalScrollBarVisibility="Auto"
                       ScrollViewer.HorizontalScrollMode="Enabled"
-                      ScrollViewer.VerticalScrollMode="Disabled">
+                      ScrollViewer.VerticalScrollMode="Disabled"
+                      CanReorderItems="True" 
+                      ReorderMode="Enabled" 
+                      AllowDrop="True">
                 <ListView.ItemsPanel>
                     <ItemsPanelTemplate>
                         <ItemsStackPanel Orientation="Horizontal" />
                     </ItemsPanelTemplate>
                 </ListView.ItemsPanel>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="MinWidth" Value="0"/>
+                        <Setter Property="MinHeight" Value="0"/>
+                        <Setter Property="Padding" Value="0"/>
+                        <Setter Property="Margin" Value="0,8,0,0"/>
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="vmItems:FolderItemViewModel">
+                        <Border Background="{x:Bind Color, Mode=OneWay, Converter={StaticResource HexToBrushConverter}, FallbackValue=#646464}">
+                            <TextBlock Text="{x:Bind Name, Mode=OneWay}" 
+                                       Margin="16,0"
+                                       Foreground="White"
+                                       VerticalAlignment="Center" />
+                        </Border>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
+            <Border Grid.Row="1" Background="{x:Bind VM.SelectedFolderItem.Color, Mode=OneWay, Converter={StaticResource HexToBrushConverter}}" />
         </Grid>
 
         <ListView x:Name="TodoListView"
@@ -107,8 +120,7 @@
                   SelectedItem="{x:Bind VM.SelectedTodoItem, Mode=TwoWay, Converter={StaticResource ChangeTypeConverter}}"
                   ItemsSource="{x:Bind VM.TodoItems, Mode=OneWay}"
                   ItemContainerStyle="{StaticResource TodoItemContainerStyle}"
-                  ItemTemplate="{StaticResource TodoItemTemplate}"
-                  SelectionMode="Single" 
+                  ItemTemplate="{StaticResource TodoItemTemplate}" 
                   VerticalAlignment="Top">
             <i:Interaction.Behaviors>
                 <ic:EventTriggerBehavior EventName="Tapped">
@@ -130,12 +142,17 @@
         </CommandBar>
 
         <Border Grid.RowSpan="3"
-                DataContext="{x:Bind VM.NavigationService, Mode=OneWay}"
-                Visibility="{Binding Flyout, Mode=OneWay, FallbackValue=Collapsed, Converter={StaticResource NullToVisibilityConverter}}"
-                Background="#66000000"
-                Padding="16">
+                DataContext="{Binding NavigationService, Source={StaticResource Locator}}"
+                Visibility="{Binding Flyout, FallbackValue=Collapsed, Converter={StaticResource NullToVisibilityConverter}}">
             <Grid>
-                <ContentControl Content="{Binding Flyout, Mode=OneWay}"
+                <Border Background="#66000000">
+                    <i:Interaction.Behaviors>
+                        <ic:EventTriggerBehavior EventName="Tapped">
+                            <ic:InvokeCommandAction Command="{Binding GoBackCommand}" />
+                        </ic:EventTriggerBehavior>
+                    </i:Interaction.Behaviors>
+                </Border>
+                <ContentControl Content="{Binding Flyout}"
                                 HorizontalContentAlignment="Stretch" 
                                 VerticalContentAlignment="Stretch">
                     <ContentControl.ContentTemplateSelector>
@@ -145,6 +162,13 @@
                 </ContentControl>
             </Grid>
         </Border>
+
+        <Grid Grid.RowSpan="3">
+            <ProgressBar DataContext="{Binding ProgressService, Source={StaticResource Locator}}" 
+                         IsIndeterminate="{Binding IsBusy}"
+                         Background="Transparent"
+                         VerticalAlignment="Top" />
+        </Grid>
 
     </Grid>
 </v:ExtendedPage>
