--- a/OneDo/Views/Flyouts/TodoEditor.xaml
+++ b/OneDo/Views/Flyouts/TodoEditor.xaml
@@ -1,13 +1,13 @@
 ﻿<v:FlyoutBase x:Class="OneDo.Views.Flyouts.TodoEditor"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
               xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
               xmlns:v="using:OneDo.Views"
-              mc:Ignorable="d"
               d:DesignHeight="640"
-              d:DesignWidth="360">
-    
+              d:DesignWidth="360"
+              mc:Ignorable="d">
+
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -15,41 +15,47 @@
         </Grid.RowDefinitions>
 
         <StackPanel Margin="16">
-            <TextBox Header="Title" Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,16" />
-            <TextBox Header="Note" Text="{Binding Note, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,0,0,16" />
-            <CalendarDatePicker Header="Date" Date="{x:Bind VM.Date, Mode=TwoWay}" Margin="0,0,0,16" HorizontalAlignment="Stretch" />
+            <TextBox Margin="0,0,0,16"
+                     Header="Title"
+                     Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Margin="0,0,0,16"
+                     Header="Note"
+                     Text="{Binding Note, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+            <CalendarDatePicker Margin="0,0,0,16"
+                                HorizontalAlignment="Stretch"
+                                Date="{x:Bind VM.Date, Mode=TwoWay}"
+                                Header="Date" />
         </StackPanel>
 
         <CommandBar Grid.Row="1">
             <CommandBar.PrimaryCommands>
-                <AppBarButton Label="Complete"
-                              Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}"
-                              Command="{x:Bind VM.CompleteCommand, Mode=OneWay}">
+                <AppBarButton Command="{x:Bind VM.CompleteCommand, Mode=OneWay}"
+                              Label="Complete"
+                              Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}">
                     <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xE8FB;"/>
+                        <FontIcon Glyph="&#xE8FB;" />
                     </AppBarButton.Icon>
                 </AppBarButton>
-                <AppBarButton Label="Delete"
-                              Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}">
+                <AppBarButton Label="Delete" Visibility="{x:Bind VM.IsNew, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}, ConverterParameter=!}">
                     <AppBarButton.Flyout>
                         <Flyout>
                             <StackPanel>
-                                <TextBlock Text="Are you sure?" Margin="0,0,0,10" />
-                                <Button Content="Delete" 
-                                        Command="{x:Bind VM.DeleteCommand, Mode=OneWay}" 
-                                        HorizontalAlignment="Stretch" />
+                                <TextBlock Margin="0,0,0,10" Text="Are you sure?" />
+                                <Button HorizontalAlignment="Stretch"
+                                        Command="{x:Bind VM.DeleteCommand, Mode=OneWay}"
+                                        Content="Delete" />
                             </StackPanel>
                         </Flyout>
                     </AppBarButton.Flyout>
                     <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xE74D;"/>
+                        <FontIcon Glyph="&#xE74D;" />
                     </AppBarButton.Icon>
                 </AppBarButton>
-                <AppBarButton Label="Save" 
-                              IsEnabled="{x:Bind VM.IsDirty, Mode=OneWay}" 
-                              Command="{x:Bind VM.SaveCommand, Mode=OneWay}">
+                <AppBarButton Command="{x:Bind VM.SaveCommand, Mode=OneWay}"
+                              IsEnabled="{x:Bind VM.IsDirty, Mode=OneWay}"
+                              Label="Save">
                     <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xE74E;"/>
+                        <FontIcon Glyph="&#xE74E;" />
                     </AppBarButton.Icon>
                 </AppBarButton>
             </CommandBar.PrimaryCommands>
