--- a/OneDo/Themes/FolderListView.xaml
+++ b/OneDo/Themes/FolderListView.xaml
@@ -229,14 +229,14 @@
                                            DisabledOpacity="{ThemeResource ListViewItemDisabledThemeOpacity}"
                                            DragBackground="Transparent"
                                            DragForeground="{ThemeResource ListViewItemDragForegroundThemeBrush}"
-                                           DragOpacity="0.2"
+                                           DragOpacity="{ThemeResource ListViewItemDragThemeOpacity}"
                                            FocusBorderBrush="{ThemeResource SystemControlForegroundAltHighBrush}"
                                            FocusSecondaryBorderBrush="{ThemeResource SystemControlForegroundBaseHighBrush}"
                                            PlaceholderBackground="Transparent"
                                            PointerOverBackground="Transparent"
                                            PointerOverForeground="{ThemeResource SystemControlHighlightAltBaseHighBrush}"
                                            PressedBackground="Transparent"
-                                           ReorderHintOffset="32"
+                                           ReorderHintOffset="{ThemeResource ListViewItemReorderHintThemeOffset}"
                                            SelectedBackground="Transparent"
                                            SelectedForeground="{ThemeResource SystemControlHighlightAltBaseHighBrush}"
                                            SelectedPointerOverBackground="Transparent"
